Update to latest version of Highcharts

--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -201,8 +201,8 @@
         <script src="{% static 'common/bootstrap/3.0.3/dist/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'ceeq/jqueryui/js/jquery-ui-1.10.4.js' %}"></script>
         <script src="{% static 'common/placeholders/3.0.0/placeholders.min.js' %}"></script>
-        <script src="{% static 'common/highcharts/3.0.7/js/highcharts.js' %}"></script>
-        <script src="{% static 'common/highcharts/3.0.7/js/exporting.js' %}"></script>
+        <script src="{% static 'common/highcharts/4.0.4/js/highcharts.js' %}"></script>
+        <script src="{% static 'common/highcharts/4.0.4/js/modules/exporting.js' %}"></script>
         <script src="{% static 'common/dataTables/1.10.0/js/jquery.dataTables.js' %}"></script>
 
         <script>
