--- a/ceeq/apps/projects/templates/project_dd_detail.html
+++ b/ceeq/apps/projects/templates/project_dd_detail.html
@@ -5,34 +5,38 @@
             <legend>Project Information</legend>
             <div class="row">
                 <div class="col-md-2"><strong>Project Name: </strong> </div>
-                <div class="col-md-1">{{ project.name }}</div>
+                <div class="col-md-2">{{ project.name }}</div>
             </div>
             <div class="row">
                 <div class="col-md-2"><strong>Current Version: </strong></div>
-                <div class="col-md-1">{{ project.jira_version }}</div>
+                <div class="col-md-2">{{ project.jira_version }}</div>
             </div>
 
             <div class="row">
-            {% if project.score == -1 %}
-                No created issues
-            {% elif project.score == 20 %}
-                <strong>CEEQ Score: &nbsp;&nbsp;</strong>Out of Range
-            {% elif project.score == -3 %}
-                No open issues
-            {% elif project.score == -4 %}
-                No JIRA Data
-            {% elif project.score == -9 %}
-                No evaluate
+            {% if project.score > 10 %}
+                <div class="col-md-2">
+                    {% if project.score == 101 %}
+                        No created issues
+                    {% elif project.score == 102 %}
+                        <strong>CEEQ Score: &nbsp;&nbsp;</strong>Out of Range
+                    {% elif project.score == 103 %}
+                        No open issues
+                    {% elif project.score == 104 %}
+                        No JIRA Data
+                    {% elif project.score == 109 %}
+                        No evaluate
+                    {% endif %}
+                </div>
             {% else %}
                 <div class="col-md-2"><strong>CEEQ Score: &nbsp;&nbsp;</strong></div>
-                <div class="col-md-1">{{ project.score }}</div>
+                <div class="col-md-2">{{ project.score }}</div>
             {% endif %}
             </div>
 
             <br>
         </div>
 
-        {% if project.score > 0 %}
+        {% if project.score < 10 %}
             <div class="row">
                 <legend>Components Weighted Factors (Scales: 0 -1)</legend>
                 <p>Standard Component Names: <strong>{{ component_names_standard }}</strong></p>
