Showing negative CEEQ score in red color

--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -15,7 +15,7 @@
                 {% elif project.score == 109 %}
                     No evaluate
                 {% else %}
-                    <strong>CEEQ Score: &nbsp;&nbsp;</strong>{{ project.score }}
+                    <strong>CEEQ Score: &nbsp;&nbsp;</strong>{{ project.score|floatformat:2 }}
                 {% endif %}
             </p>
             <br>
