update help guide page

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -255,6 +255,8 @@
                                 </tr>
                             </tbody>
                         </table>
+                    Weight factor of ‘Voice Slots’ changed from 0.15 to 0.20 while ‘Platform’ changed from
+                        0.20 to 0.15.</p>
                     </div>
                     {% endif %}
 
