pie graph export button works now

--- a/ceeq/apps/projects/templates/project_detail_only_uat.html
+++ b/ceeq/apps/projects/templates/project_detail_only_uat.html
@@ -8,9 +8,9 @@
                 <div class="row">
                     <p style="text-align: center">
                         Export Graph to:
-                        <button id="png">PNG</button>
-                        <button id="jpeg">JPEG</button>
-                        <button id="pdf">PDF</button>
+                        <button id="png_only_uat">PNG</button>
+                        <button id="jpeg_only_uat">JPEG</button>
+                        <button id="pdf_only_uat">PDF</button>
                     </p>
                 </div>
             {% endif %}
