Only UAT counted exception handling

--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -187,6 +187,11 @@
         var data_only_uat = {{ dd_pie_data_only_uat | safe }};
 
         {% include 'project_detail.js' %}
+
+        if (data_only_uat[3] == 103 ) {
+            $('#component_percentage_pie_chart_only_uat').hide();
+            $('#export_data_only_uat').html('No Issues Open.');
+        }
     </script>
 
 {% endblock %}
