--- a/ceeq/apps/projects/templates/project_detail_only_uat.html
+++ b/ceeq/apps/projects/templates/project_detail_only_uat.html
@@ -1,4 +1,3 @@
-{{ dd_pie_data_only_uat}}
 
 <div id="component_percentage_pie_chart_only_uat" style="width: 700px; height: 600px; margin: 0 auto;">
     <div class="loading" style="text-align:center; margin-top: 100px;">
@@ -9,7 +8,7 @@
 
 {% if project.score < 10 %}
     <div class="row">
-        <p style="text-align: center">
+        <p style="text-align: center" id="export_data_only_uat">
             Export Graph to:
             <button id="png_only_uat">PNG</button>
             <button id="jpeg_only_uat">JPEG</button>
