--- a/ceeq/apps/search/templates/search.html
+++ b/ceeq/apps/search/templates/search.html
@@ -20,7 +20,7 @@
                     {% for project in projects %}
                         <tr>
                             <td><a href='{% url 'project_detail' project.id%}'>{{ project.name|truncatechars:20 }}</a></td>
-                            <td><a href='http://jira.west.com/rest/api/2/search?jql=project={{ project.jira_name }}'>{{ project.jira_name }}</a></td>
+                            <td><a href='http://jira.west.com/browse/{{ project.jira_name }}'>{{ project.jira_name }}</a></td>
                             <td>
                                 {% if project.score == -1 %}
                                     Not Available
