update guide page info

--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -209,7 +209,7 @@
                                 </ul>
                             <li>Issue Resolution: </li>
                                 <ul>
-                                    <li>Resolution not included</li>
+                                    <li>Resolution not included if it is closed</li>
                                         <ul>
                                             <li>Duplicate</li>
                                             <li>Works as Design</li>
