--- a/ceeq/apps/projects/templates/project_sub_component_platform.html
+++ b/ceeq/apps/projects/templates/project_sub_component_platform.html
@@ -28,7 +28,7 @@
 {% block footer %}
     <script>
         var title = 'Platform'
-        $.getJSON("{% url 'fetch_platform_subcomponents_pie' project.id %}?uat_type={{ uat_type }}").done(function(data){
+        $.getJSON("{% url 'fetch_subcomponents_pie_component' project.id %}?component_type={{ component_type }}&uat_type={{ uat_type }}").done(function(data){
             draw_pie_chart_graph(data, '{{ uat_type }}');
         });
         {% include 'project_sub_components.js' %}
