--- a/ceeq/apps/projects/templates/project_sub_component_voiceslots.html
+++ b/ceeq/apps/projects/templates/project_sub_component_voiceslots.html
@@ -27,7 +27,7 @@
 
 {% block footer %}
     <script>
-        $.getJSON("{% url 'fetch_voiceslots_subcomponents_pie' project.id %}?uat_type={{ uat_type }}").done(function(data){
+        $.getJSON("{% url 'fetch_subcomponents_pie_component' project.id %}?component_type={{ component_type }}&uat_type={{ uat_type }}").done(function(data){
             draw_pie_chart_graph(data, '{{ uat_type }}');
         });
         {% include 'project_sub_components.js' %}
