voice slots sub components works now

--- a/ceeq/apps/projects/templates/project_sub_component_voiceslots.html
+++ b/ceeq/apps/projects/templates/project_sub_component_voiceslots.html
@@ -27,6 +27,7 @@
 
 {% block footer %}
     <script>
+        var title = 'Voice Slots';
         $.getJSON("{% url 'fetch_subcomponents_pie_component' project.id %}?component_type={{ component_type }}&uat_type={{ uat_type }}").done(function(data){
             draw_pie_chart_graph(data, '{{ uat_type }}');
         });
