--- a/ceeq/apps/projects/templates/project_sub_component_voiceslots.html
+++ b/ceeq/apps/projects/templates/project_sub_component_voiceslots.html
@@ -6,7 +6,7 @@
     <div class="container">
         <br>
         <div class="row">
-            <legend>Sub Components Percentage to Voice Slots</legend>
+            <legend>Sub Components Percentage to Voice Slots - {{ project.name }}</legend>
         </div>
         <div id="apps_subcomponent_percentage_pie_chart" style="width: 800px; height: 600px; margin: 0 auto;">
             <div class="loading" style="text-align: center; margin-top: 10px;">
