--- a/ceeq/apps/projects/templates/project_dd_detail.html
+++ b/ceeq/apps/projects/templates/project_dd_detail.html
@@ -54,18 +54,18 @@
                         <th style="background-color: lightcyan">Component Name</th>
                         <th style="background-color: lightcyan">Weight</th>
                         <th style="background-color: lightcyan">Defect Impact</th>
-                        <th style="background-color: lavender; text-align: center">Total</th>
                         <th colspan="3" style="background-color: lavender; text-align: center">Blocker</th>
                         <th colspan="3" style="background-color: lavender; text-align: center">Critical</th>
                         <th colspan="3" style="background-color: lavender; text-align: center">Major</th>
                         <th colspan="3" style="background-color: lavender; text-align: center">Minor</th>
                         <th colspan="3" style="background-color: lavender; text-align: center">Trivial</th>
+                        <th style="background-color: lavender; text-align: center">SubTotal</th>
+
                     </tr>
                     <tr>
                         <th></th>
                         <th></th>
                         <th></th>
-                        <th></th>
 
                         <th style="background-color: cadetblue">O</th>
                         <th style="background-color: cadetblue">R</th>
@@ -87,6 +87,7 @@
                         <th style="background-color: cadetblue">R</th>
                         <th style="background-color: cadetblue">C</th>
 
+                        <th style="background-color: antiquewhite"></th>
               </tr>
                 </thead>
                 <tbody>
@@ -95,7 +96,6 @@
                             <td>{{ component }}</td>
                             <td>{{ weight|floatformat:3 }}</td>
                             <td>{{ dd|floatformat:3 }}</td>
-                            <td style="text-align: center;">{{ total }}</td>
 
                             <td>{{ b_o }}</td>
                             <td>{{ b_r }}</td>
@@ -116,6 +116,8 @@
                             <td>{{ t_o }}</td>
                             <td>{{ t_r }}</td>
                             <td>{{ t_c }}</td>
+
+                            <td style="text-align: center;">{{ total }}</td>
 
                         </tr>
                     {% endfor %}
